--- a/rottenMovies/pom.xml
+++ b/rottenMovies/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
