--- a/rottenMovies/pom.xml
+++ b/rottenMovies/pom.xml
@@ -55,6 +55,16 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.12.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-joda</artifactId>
+			<version>2.14.1</version>
+		</dependency>
 
 	</dependencies>
 
